up firt on test-branch

--- a/index69.html
+++ b/index69.html
@@ -14,7 +14,7 @@
       <div class="container">
           <div class="row">
               <div class="col-auto">
-                  <h1>hello word</h1>
+                  <h1>chổ này của để test branches</h1>
                   <input type="text" class="">
                   <button class="btn">xac nhan</button>
                   <p class="p-color">test cho đường dẫn  master</p>
