--- a/index3.html
+++ b/index3.html
@@ -5,23 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
       <div class="container">
-          <div class="row">
-              <div class="col-auto">
-                  <h1>hello word</h1>
-                  <input type="text" class="">
-                  <button class="btn">xac nhan</button>
-                  <p class="p-color">test cho đường dẫn  master</p>
-                  <p>thay đổi từ develop</p>
-                  <h3>thay đổi từ release</h3>
-              </div>
-          </div>
+          <h1>của release tạo</h1>
       </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
